Worked on nav toggle
Tried to fix issue on M/L screens

--- a/index.html
+++ b/index.html
@@ -263,9 +263,7 @@
         </div><!-- close copyright ID-->
       </div><!-- close footer-->
     </footer>
-    <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
   </body>
