--- a/about.html
+++ b/about.html
@@ -35,9 +35,21 @@
     </header>
     <main>
       <div class="container"><!-- main -->
+        <div style="
+        position: fixed;
+        top: 30%;
+        right: 24px;
+        width: 100%;">
+        <div style="
+        text-align: right;
+        max-width: 1000px;
+        margin: auto;
+        width: 100%;">
         <a href="files/cv.pdf" target="_blank" class="float" download>Download resume
           <i class="my-float"></i>
         </a>
+      </div>
+    </div>
         <div><!-- page heading block-->
           <h1>About</h1>
         </div><!-- close heading block-->
@@ -45,8 +57,8 @@
           <img src="img/self_portrait_600px.jpg"
           alt="Self Portrait" class="super_restrain">
         </div><!--close portrait-->
-        <div style="overflow:hidden;"><!--substance-->
 
+        <div style="overflow:hidden;"><!--substance-->
           <div id="story"><!-- id the story block -->
             <div class="container col-lg-7"><!--define story responsiveness-->
             <h2>My Story</h2>
@@ -133,7 +145,7 @@
     </div><!--close contact id-->
 
     <div id="social"><!-- id social block-->
-      <div class="container"><!--container for social block-->
+      <div class="container centered"><!--container for social block-->
         <a href=
         "https://www.linkedin.com/in/nicole-rosenberg-26b31811?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJEU8TS1nQ760%2FjI255D1Pw%3D%3D"
         target="_blank"> <!-- LinkedIn-->
