--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -40,15 +40,16 @@
 <main>
   <div id="intro"><!-- Intro -->
     <div class="container"><!-- intro container-->
-        <div class="column col-md-6 col-lg-5"><!-- image -->
+        <div class="column col-lg-5"><!-- image -->
         <picture class="centered">
         <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
         <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
         </picture>
         </div>
     <div  class="row">
-        <div class="column col-md-6 col-lg-7"><!-- context -->
-      <p>Ten years ago, I met Annie. She had recently graduated from esthetician school
+        <div class="column col-lg-7"><!-- context -->
+      <h1>Skincare App</h2>
+        <p>Ten years ago, I met Annie. She had recently graduated from esthetician school
         and was working for a challenging boss in a drab office in a basement.
         Today, she has a thriving business in a beautiful (above-ground!) spa.
         Her magnetic energy implies you can text her on a Sunday morning about
@@ -56,6 +57,8 @@
         their skincare routines, too. Thus, with the wealth of customers that she
         has accrued, Annie struggles to balance client communication, scheduling,
         product orders, and one-on-one attention.</p>
+        <p>Below, I detail the app that I designed with these concerns in mind.
+          For more examples of my work, see my <a href="https://www.behance.net/nicolerosenberg1" target="_blank">Portfolio</a> on Behance.
       </div>
     </div>
     </div><!-- close intro container-->
