--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container"><!-- intro language -->
           <div class="column col-md-6 col-lg-7"><!--apply a class to the intro-->
             <h1>Nicole Rosenberg</h1>
-            <h4><span class="centered">A Boston-based UI designer with ten years
+            <h4><span class="centered">A Boston-based UI / UX designer with ten years
               of experience in market research, a Masters in Sustainable International Development,
             and a Bachelors in Philosophy</span></h4>
             <p class="centered">
