--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -25,9 +25,9 @@
           </a>
         <nav>
           <ul><!-- not bulleted because inside nav tag-->
-            <li><a href="beyondcomfort.html">Work</a></li>
+            <li><a href="beyondcomfort.html">Work Example</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()">
               <i class="fas fa-bars"></i></a></li>
           </ul>
@@ -41,10 +41,12 @@
   <div id="intro"><!-- Intro -->
     <div class="container"><!-- intro container-->
         <div class="column col-lg-5"><!-- image -->
+        <a href="https://www.behance.net/gallery/119049285/Beyond-Comfort-Native-Spa-App" target="_blank" alt="Beyond Comfort - Full Case Study">
         <picture class="centered">
         <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
         <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
         </picture>
+      </a>
         </div>
     <div  class="row">
         <div class="column col-lg-7"><!-- context -->
@@ -96,7 +98,7 @@
       </div><!-- close staff flow illustration-->
     </div><!-- close staff flow -->
 
-    <div><!-- client flow -->
+    <div class="container row2"><!-- client flow -->
       <div class="container column col-md-6 col-lg-7"><!-- client flow text-->
   <h4>Clients</h4>
     <p>Similarly, the dashboard provides clients a snapshot of their activities
@@ -114,7 +116,7 @@
     </div><!-- close client flow -->
   </div><!-- close user flow -->
 
-    <div id="research"><!-- research -->
+    <div id="research" class="container"><!-- research -->
   <h3>Research</h3>
     <p>I conducted a “rapid fire” review of other skincare apps to guide my process
   and ensure I wasn’t omitting essential features or simply replicating an app
