--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </a>
         <nav>
           <ul><!-- not bulleted because inside nav tag-->
-            <li><a href="beyondcomfort.html">Work</a></li>
+            <li><a href="beyondcomfort.html">Work Example</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()">
               <i class="fas fa-bars"></i></a></li>
           </ul>
