--- a/about.html
+++ b/about.html
@@ -1,150 +1,166 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About - Nicole Rosenberg</title>
-    <link href="img/favicon.ico" rel="shortcut icon">
-    <link rel="stylesheet" type="text/css"
-    href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700"
-    rel="stylesheet">
-    <script src="https://kit.fontawesome.com/5b4b299e02.js" crossorigin="anonymous"></script>
-  </head>
 
-  <body id="about">
-    <header>
-      <div class="container"><!--contain the header-->
-          <div class="navtoggle" id="myNavtoggle">
-          <a href="index.html">
-          <img class="logo"
-          src="img/logo_temp.svg" alt="Nicole Rosenberg Logo">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About - Nicole Rosenberg</title>
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/5b4b299e02.js" crossorigin="anonymous"></script>
+</head>
+
+<body id="about">
+  <header>
+    <div class="container">
+      <!--contain the header-->
+      <div class="navtoggle" id="myNavtoggle">
+        <a href="index.html">
+          <img class="logo" src="img/logo_temp.svg" alt="Nicole Rosenberg Logo">
         </a>
         <nav>
-          <ul><!-- not bulleted because inside nav tag-->
+          <ul>
+            <!-- not bulleted because inside nav tag-->
             <li><a href="beyondcomfort.html">Work Example</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()">
-              <i class="fas fa-bars"></i></a></li>
+                <i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
       </div>
-      </div><!--close the header container-->
-    </header>
-    <main>
-      <div class="container"><!-- main -->
+    </div>
+    <!--close the header container-->
+  </header>
+  <main>
+    <div class="container">
+      <!-- main -->
 
-        <div><!-- page heading block-->
-          <h1>About</h1>
-        </div><!-- close heading block-->
+      <div>
+        <!-- page heading block-->
+        <h1>About</h1>
+      </div><!-- close heading block-->
 
 
 
-        <div class="container row2"><!--portrait and story-->
+      <div class="container row2">
+        <!--portrait and story-->
 
-          <div id="story" class="column col-lg-7"><!-- id the story block -->
-            <h2>My Story</h2>
-              <p>
-                I pursue roles in which I can leverage and marry my left-brain creativity
-                and right-brain analytical experience & education to create successful user
-                experiences in web and software applications.
-              </p>
-              <p>
-                For over ten years, I designed and led market research projects.
-                This work involved preparing survey, interview, & focus group instruments
-                that targeted program stakeholders & participants; building samples for
-                those efforts; conducting hundreds of interviews; analyzing results;
-                and succinctly reporting those results to clients.
-              </p>
-              <p>
-                I’ve been continually praised for my natural ability to connect with my
-                clients and empathize with their unique needs. No matter how small, I
-                walk away from research with actionable guidance for my clients.
-                Moreover, I am organized, focused, collaborative, communicative,
-                reflective, detailed, prompt, and a natural leader.
-                Along the way, I always promote out-of-the-box thinking.
-              </p>
-              <p>
-                My success is bolstered by my varied education: a certificate in UI design,
-                a Master of Arts in Sustainable International Development, and
-                a Bachelor of Arts in Philosophy.
-            </div><!-- close story-->
+        <div id="story" class="column col-lg-7">
+          <!-- id the story block -->
+          <p>
+            I pursue roles in which I can leverage and marry my left-brain creativity
+            and right-brain analytical experience & education to create successful user
+            experiences in web and software applications.
+          </p>
+          <p>
+            For over ten years, I designed and led market research projects.
+            This work involved preparing survey, interview, & focus group instruments
+            that targeted program stakeholders & participants; building samples for
+            those efforts; conducting hundreds of interviews; analyzing results;
+            and succinctly reporting those results to clients.
+          </p>
+          <p>
+            I’ve been continually praised for my natural ability to connect with my
+            clients and empathize with their unique needs. No matter how small, I
+            walk away from research with actionable guidance for my clients.
+            Moreover, I am organized, focused, collaborative, communicative,
+            reflective, detailed, prompt, and a natural leader.
+            Along the way, I always promote out-of-the-box thinking.
+          </p>
+          <p>
+            My success is bolstered by my varied education: a certificate in UI design,
+            a Master of Arts in Sustainable International Development, and
+            a Bachelor of Arts in Philosophy.
+        </div><!-- close story-->
 
-            <div class="centered column col-lg-5"><!-- portrait-->
-              <img src="img/self_portrait_600px.jpg"
-              alt="Self Portrait" class="restrain" style="padding-top: 48px">
-            </div><!--close portrait-->
-          </div><!-- close portrait and story -->
+        <div class="centered column col-lg-5">
+          <!-- portrait-->
+          <img src="img/self_portrait_600px.jpg" alt="Self Portrait" class="restrain" style="padding-top: 48px">
+        </div>
+        <!--close portrait-->
+      </div><!-- close portrait and story -->
 
-          <div class="container centered row"><!--buttons-->
+      <div class="container centered row">
+        <!--buttons-->
 
-              <a href="files/cv.pdf" target="_blank" class="button" download>Resume</a>
+        <a href="files/cv.pdf" target="_blank" class="button" download>Resum&eacute</a>
 
-              <a href="https://www.behance.net/nicolerosenberg1" target="_blank" class="button">Portfolio</a>
+        <a href="https://www.behance.net/nicolerosenberg1" target="_blank" class="button">Portfolio</a>
 
+      </div>
+
+      <div id="skill_tool" class="container row">
+        <!-- id skills & tools block -->
+        <div>
+          <!--define s&t responsiveness when large-->
+          <h2>Skills & Tools</h2>
+          <div>
+            <!--lists container -->
+            <div class="col-md-6">
+              <!--relevant skills -->
+              <h3>Relevant Skills</h3>
+              <ul>
+                <li>UI/UX design
+                <li>Animation</li>
+                <li>CSS, HTML, & JavaScript</li>
+                <li>Data analysis</li>
+                <li>Project management</li>
+                <li>Writing & reporting</li>
+                <li>Client relations</li>
+              </ul>
+            </div><!-- close skills -->
+            <div class="col-md-6">
+              <!--tools-->
+              <h3>Tools I use</h3>
+              <ul>
+                <li>Adobe XD, Sketch, Figma</li>
+                <li>Prott</li>
+                <li>Balsamiq</li>
+                <li>PiktoChart</li>
+                <li>LucidChart</li>
+                <li>Adobe Illustrator & Photoshop</li>
+                <li>SquareSpace</li>
+              </ul>
+            </div><!-- close tools -->
           </div>
+          <!--close lists container-->
+        </div><!-- close s&t responsiveness when large-->
+      </div><!-- skills & tools id -->
+    </div>
+    <!--close substance-->
 
-          <div id="skill_tool" class="container row"><!-- id skills & tools block -->
-            <div><!--define s&t responsiveness when large-->
-              <h2>Skills & Tools</h2>
-                <div><!--lists container -->
-                <div class="col-md-6"><!--relevant skills -->
-                  <h3>Relevant Skills</h3>
-                    <ul>
-                      <li>UI/UX design
-                      <li>Animation</li>
-                      <li>CSS, HTML, & JavaScript</li>
-                      <li>Data analysis</li>
-                      <li>Project management</li>
-                      <li>Writing & reporting</li>
-                      <li>Client relations</li>
-                    </ul>
-                </div><!-- close skills -->
-                <div class="col-md-6"><!--tools-->
-                  <h3>Tools I use</h3>
-                    <ul>
-                      <li>Adobe XD, Sketch, Figma</li>
-                      <li>Prott</li>
-                      <li>Balsamiq</li>
-                      <li>PiktoChart</li>
-                      <li>LucidChart</li>
-                      <li>Adobe Illustrator & Photoshop</li>
-                      <li>SquareSpace</li>
-                    </ul>
-                </div><!-- close tools -->
-              </div><!--close lists container-->
-            </div><!-- close s&t responsiveness when large-->
-          </div><!-- skills & tools id -->
-        </div><!--close substance-->
+  </main>
 
-
-  </div>
-      </div><!-- close main container -->
-    </main>
-
-    <footer>
-  <div><!--footer block-->
-    <div id="contact" class="centered"><!-- id contact block-->
-      <div class="container"><!--container for contact-->
-        <h2>Let's Connect!</h2>
+  <footer>
+    <div>
+      <!--footer block-->
+      <div id="contact" class="centered">
+        <!-- id contact block-->
+        <div class="container">
+          <!--container for contact-->
+          <h2>Let's Connect!</h2>
           <a href="tel:9174743065">917-474-3065</a>
-        <div class="row"><!-- email-->
-          <a href="mailto:colerose412@gmail.com" class="button contact">Email me</a>
-        </div><!-- close email-->
-      </div><!--close container contact-->
-    </div><!--close contact id-->
+          <div class="row">
+            <!-- email-->
+            <a href="mailto:colerose412@gmail.com" class="button contact">Email me</a>
+          </div><!-- close email-->
+        </div>
+        <!--close container contact-->
+      </div>
+      <!--close contact id-->
 
-    <div id="social"><!-- id social block-->
-      <div class="container centered"><!--container for social block-->
-        <a href=
-        "https://www.linkedin.com/in/nicole-rosenberg-26b31811?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJEU8TS1nQ760%2FjI255D1Pw%3D%3D"
-        target="_blank"> <!-- LinkedIn-->
-        <svg height="42px" fill="#2e3440" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
-        version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-        xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256
+      <div id="social">
+        <!-- id social block-->
+        <div class="container centered">
+          <!--container for social block-->
+          <a href="https://www.linkedin.com/in/nicole-rosenberg-26b31811?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJEU8TS1nQ760%2FjI255D1Pw%3D%3D" target="_blank">
+            <!-- LinkedIn-->
+            <svg height="42px" fill="#2e3440" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+              xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <path d="M256,0c141.29,0 256,114.71 256,256c0,141.29 -114.71,256
           -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256
         256,-256Zm-80.037,399.871l0,-199.921l-66.464,0l0,199.921l66.464,0Zm239.62,0l0,-114.646c0,-61.409
         -32.787,-89.976
@@ -153,21 +169,20 @@
         15.737,-24.299 34.095,-24.299c24.034,0 33.663,18.34
         33.663,45.204l0,106.966l66.45,0Zm-272.403,-296.321c-22.74,0 -37.597,14.95
         -37.597,34.545c0,19.182 14.405,34.544 36.717,34.544l0.429,0c23.175,0
-        37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z"/>
-        </svg>
-        </a>
+        37.6,-15.362 37.6,-34.544c-0.43,-19.595 -14.424,-34.545 -37.149,-34.545Z" />
+            </svg>
+          </a>
 
-        <a href="https://www.behance.net/nicolerosenberg1" target="_blank"> <!-- Behance-->
-        <svg height="42px" version="1.1" viewBox="0 0 60 60" width="60px"
-          xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
-          xmlns:xlink="http://www.w3.org/1999/xlink"><title/><defs/>
-          <g fill="none"
-          fill-rule="evenodd" id="black" stroke="none" stroke-width="1">
-          <g id="behance">
-            <path d="M30,60 C46.5685433,60 60,46.5685433 60,30 C60,13.4314567 46.5685433,0
-              30,0 C13.4314567,0 0,13.4314567 0,30 C0,46.5685433 13.4314567,60 30,60 Z"
-              fill="#2e3440"/>
-              <path d="M35.423091,19.8620192 L35.423091,22.1697115
+          <a href="https://www.behance.net/nicolerosenberg1" target="_blank">
+            <!-- Behance-->
+            <svg height="42px" version="1.1" viewBox="0 0 60 60" width="60px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <title />
+              <defs />
+              <g fill="none" fill-rule="evenodd" id="black" stroke="none" stroke-width="1">
+                <g id="behance">
+                  <path d="M30,60 C46.5685433,60 60,46.5685433 60,30 C60,13.4314567 46.5685433,0
+              30,0 C13.4314567,0 0,13.4314567 0,30 C0,46.5685433 13.4314567,60 30,60 Z" fill="#2e3440" />
+                  <path d="M35.423091,19.8620192 L35.423091,22.1697115
               L44.6538602,22.1697115 L44.6538602,19.8620192 L35.423091,19.8620192
               Z M12.1153846,18.6608699 L22.7675034,18.7788462 C22.7675034,18.7788462
               28.6170466,18.4703274 29.4233025,23.1146711 C30.2295586,27.7590147
@@ -211,16 +226,17 @@
               C38.2494044,28.0572754 37.9036447,28.3090656 37.606543,28.6268638
               C37.3094413,28.944662 37.0712513,29.3113468 36.8919658,29.726929
               C36.7126803,30.1425113 36.6076718,30.5849775 36.5769372,31.054341
-              L43.3846295,31.054341 Z" fill="#ffffff"/>
-            </g>
-          </g>
-        </svg>
-        </a>
+              L43.3846295,31.054341 Z" fill="#ffffff" />
+                </g>
+              </g>
+            </svg>
+          </a>
 
-        <a href="https://www.twitter.com/colerose412" target="_blank"> <!-- Twitter -->
-        <svg height="42px" fill="#2e3440" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
-          version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-          xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256,0c141.29,0
+          <a href="https://www.twitter.com/colerose412" target="_blank">
+            <!-- Twitter -->
+            <svg height="42px" fill="#2e3440" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+              xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <path d="M256,0c141.29,0
           256,114.71 256,256c0,141.29 -114.71,256 -256,256c-141.29,0 -256,-114.71 -256,-256c0,-141.29 114.71,-256
           256,-256Zm-45.091,392.158c113.283,0 175.224,-93.87 175.224,-175.223c0,-2.682 0,-5.364 -0.128,-7.919c12.005,-8.684
           22.478,-19.54 30.779,-31.928c-10.983,4.853 -22.861,8.174 -35.377,9.706c12.772,-7.663 22.478,-19.668
@@ -230,21 +246,21 @@
           27.459,51.213c-10.09,-0.255 -19.541,-3.065 -27.842,-7.662l0,0.766c0,29.885 21.2,54.661
           49.425,60.409c-5.108,1.404 -10.6,2.171 -16.219,2.171c-3.96,0 -7.791,-0.383 -11.622,-1.15c7.79,24.521
           30.523,42.274 57.471,42.784c-21.073,16.476 -47.637,26.31 -76.501,26.31c-4.981,0 -9.834,-0.256
-          -14.687,-0.894c26.948,17.624 59.387,27.841 94.125,27.841Z"/>
-        </svg>
-        </a>
-      </div><!-- close social container-->
-    </div><!-- close social ID-->
+          -14.687,-0.894c26.948,17.624 59.387,27.841 94.125,27.841Z" />
+            </svg>
+          </a>
+        </div><!-- close social container-->
+      </div><!-- close social ID-->
 
-    <div id="copyright">
-      <div class="container centered">
-        <p>&copy; Copyright Nicole Rosenberg 2021</p>
-      </div><!-- close copyright container-->
-    </div><!-- close copyright ID-->
-  </div><!-- close footer-->
-</footer>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+      <div id="copyright">
+        <div class="container centered">
+          <p>&copy; Copyright Nicole Rosenberg 2021</p>
+        </div><!-- close copyright container-->
+      </div><!-- close copyright ID-->
+    </div><!-- close footer-->
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </body>
+
 </html>
