--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <!--close container-->
         </div><!-- close hero id -->
 
-        <div class="container column col-md-6 col-lg-5 centered">
+        <div class="container column col-md-6 col-lg-5" id="cartoon">
           <!--animation-->
           <svg xmlns="http://www.w3.org/2000/svg" width="300" height="314" viewBox="0 0 717.09 750.015">
             <g id="ui_designer" data-name="ui designer" transform="translate(-140.991 0)">
