--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/5b4b299e02.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5b4b299e02.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="home">
