--- a/beyondcomfort.html
+++ b/beyondcomfort.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-
   <script src="https://kit.fontawesome.com/5b4b299e02.js" crossorigin="anonymous"></script>
 </head>
 
@@ -47,7 +45,7 @@
         <div class="column col-lg-5">
           <!-- image -->
           <a href="https://www.behance.net/gallery/119049285/Beyond-Comfort-Native-Spa-App" target="_blank">
-            <picture class="centered">
+            <picture>
               <source srcset="img/beyond_comfort/beyondcomfort_cover_600px@2x.jpg" media="(max-width:767px)">
               <img src="img/beyond_comfort/beyondcomfort_cover_1200px@2x.jpg" alt="Beyond Comfort Cover">
             </picture>
