--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <!-- Project 2 -->
             <div class="column col-md-6 col-lg-7">
               <!-- image -->
-              <a href="davisproperties.html">
+              <a href="https://www.behance.net/gallery/119683371/Messaging-Hub-Davis-Properties" target="_blank">
                 <picture>
                   <source srcset="img/davis_properties/davisprop_cover_600px@2x.jpg" media="(max-width:767px)">
                   <img src="img/davis_properties/davisprop_cover_1200px@2x.jpg" alt="Davis Properties Cover">
